--- a/doit-management/src/main/resources/bootstrap-test2.yml
+++ b/doit-management/src/main/resources/bootstrap-test2.yml
@@ -7,7 +7,7 @@ mysql:
     type: com.alibaba.druid.pool.DruidDataSource
     write:
       name: yishu_write
-      url: jdbc:mysql://maxscale.uat.doitglotech.co.id:3388/doit?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
       username: userdoit
       password: PJf4jqQZ0igtKQ
       # 使用druid数据源
@@ -28,7 +28,7 @@ mysql:
       maxOpenPreparedStatements: 20
     read01:
       name: yishu_read01
-      url: jdbc:mysql://maxscale.uat.doitglotech.co.id:3388/doit?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
       username: userdoit
       password: PJf4jqQZ0igtKQ
       # 使用druid数据源
@@ -49,7 +49,7 @@ mysql:
       maxOpenPreparedStatements: 20
     read02:
       name: yishu_read02
-      url: jdbc:mysql://maxscale.uat.doitglotech.co.id:3388/doit?useUnicode=true&characterEncoding=utf-8
+      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
       username: userdoit
       password: PJf4jqQZ0igtKQ
       # 使用druid数据源
@@ -80,10 +80,10 @@ jedis:
       maxWaitMillis: 100000    # 最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
     sentinel:
       master: mymaster
-      nodes: redis-A-01.uat.doitglotech.co.id:26379, redis-B-01.uat.doitglotech.co.id:26379, redis-B-02.uat.doitglotech.co.id:26379
+      nodes: redis-A-01.uat.doitglotech.cloud:26379, redis-B-01.uat.doitglotech.cloud:26379, redis-B-02.uat.doitglotech.cloud:26379
 
 mongo:
-  repleSet: mongo-A-01.uat.doitglotech.co.id:37837
+  repleSet: mongo-A-01.uat.doitglotech.cloud:37837
   username: do-it-use
   password: do-it-pwd
   dbName: do-it
@@ -91,10 +91,10 @@ mongo:
   threadsAllowedToBlockForConnectionMultiplier: 10
 
 HttpUrl:
-  #smsUrl: http://api-intl.uat.doitglotech.co.id/sms/send #:8899/sms/send
-  smsUrl: http://invalid_url.uat.doitglotech.co.id/sms/send #:8899/sms/send
-  #smsUrlTwilio: http://api-intl.uat.doitglotech.co.idsms/login/code #:8899/sms/login/code
-  #smsUrlTwilioVerify: http://api-intl.uat.doitglotech.co.id/sms/login/verify #:8899/sms/login/verify
+  #smsUrl: http://api-intl.uat.doitglotech.cloud/sms/send #:8899/sms/send
+  smsUrl: http://invalid_url.uat.doitglotech.cloud/sms/send #:8899/sms/send
+  #smsUrlTwilio: http://api-intl.uat.doitglotech.cloud/sms/login/code #:8899/sms/login/code
+  #smsUrlTwilioVerify: http://api-intl.uat.doitglotech.cloud/sms/login/verify #:8899/sms/login/verify
 SmsChannelType:
   type: ZENZIVA
   collection: ZENZIVA
@@ -106,7 +106,7 @@ des:
 upload:
   path: http://www.do-it.id
   #imagePath: http://control2.uanguang.co.id/manage/showStreamOnBrowser?path=
-  imagePath: http://api-intl.uat.doitglotech.co.id/manage/showStreamOnBrowser?path=
+  imagePath: http://api-intl.uat.doitglotech.cloud/manage/showStreamOnBrowser?path=
 
 downlaod:
   writerPath: /home/management/savePhoneNums/templates.csv
@@ -119,7 +119,7 @@ collection:
 
 third:
   upload:
-    uploadHost: http://api-intl.uat.doitglotech.co.id
+    uploadHost: http://api-intl.uat.doitglotech.cloud
     uploadFilePath: /uploadManageFile
     uploadManageFileUnverified: /uploadManageFileUnverified
   cashcash:
@@ -188,7 +188,7 @@ third:
     activationUrl: https://apiuat.tandatanganku.com/ACTMitra-M.html
     sendDocumentUrl: https://apiuat.tandatanganku.com/SendDocMitraAT.html
     signUrl: https://apiuat.tandatanganku.com/SignWebView.html
-    contractDir: /MyUpload/DOIT_CONTRACT
+    contractDir: /mnt/MyUpload/DOIT_CONTRACT
     automaticSignKUser: e8r5QbytnJ5g2HOo
     automaticSignEmail: it@do-it.id
     automaticSignRealName: it@do-it.id
@@ -196,11 +196,11 @@ third:
     apiDocumentStautsUrl:  https://apiuat.tandatanganku.com/STATUSDOC.html
     apiDocumentDownloadUrl: https://apiuat.tandatanganku.com/DWMITRA64.html
 pay:
-  inactiveOrderUrl: http://api-intl.uat.doitglotech.co.id/payment/inactive/ #:8888/payment/inactive/
+  inactiveOrderUrl: http://api-intl.uat.doitglotech.cloud/payment/inactive/ #:8888/payment/inactive/
   token: eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJwYXltZW50IiwiZXhwIjoxODQ4OTY3MjQwfQ.5FLd74a7FENNxeg3rDrOXTos9tk8iQUmD3LNkSvmch-dtqZjdMlB-rdIDchNp4UJydOMlTyyP_ZrkmFNXX4pcA
-  cheakBcaBalanceUrl: http://api-intl.uat.doitglotech.co.id/balance/bca #:8888/balance/bca
-  cheakXenditBalanceUrl: http://api-intl.uat.doitglotech.co.id/balance/xendit #:8888/balance/xendit
-  cheakLoanUrl: http://api-intl.uat.doitglotech.co.id/payment/ #:8888/payment/
+  cheakBcaBalanceUrl: http://api-intl.uat.doitglotech.cloud/balance/bca #:8888/balance/bca
+  cheakXenditBalanceUrl: http://api-intl.uat.doitglotech.cloud/balance/xendit #:8888/balance/xendit
+  cheakLoanUrl: http://api-intl.uat.doitglotech.cloud/payment/ #:8888/payment/
 
 spring:
   mail:
@@ -221,4 +221,4 @@ spring:
   freemarker:
     checkTemplateLocation: false
 manager:
-  ourPayPath: http://api-intl.uat.doitglotech.co.id/
+  ourPayPath: http://api-intl.uat.doitglotech.cloud/
