--- a/doit-upload/src/main/resources/bootstrap-test2.yml
+++ b/doit-upload/src/main/resources/bootstrap-test2.yml
@@ -3,8 +3,8 @@ server:
   port: 8085
 
 upload:
-  rootPath: /MyUpload
-  rootPathBak: /MyUpload_bak
+  rootPath: /mnt/MyUpload
+  rootPathBak: /mnt/MyUpload_bak
 #  rootPath: E:/Do-It/SECRET
 #  rootPathBak: E:/Do-It/SECRET
   maxFileSize: 10MB
@@ -22,7 +22,7 @@ jedis:
       maxWaitMillis: 100000    # 最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
     sentinel:
       master: mymaster
-      nodes: redis-A-01.uat.doitglotech.co.id:26379, redis-B-01.uat.doitglotech.co.id:26379, redis-B-02.uat.doitglotech.co.id:26379
+      nodes: redis-A-01.uat.doitglotech.cloud:26379, redis-B-01.uat.doitglotech.cloud:26379, redis-B-02.uat.doitglotech.cloud:26379
 
 rsa:
   file:
