isinvited switch & reject duration configurable

--- a/doit-risk/src/main/resources/bootstrap-test2.yml
+++ b/doit-risk/src/main/resources/bootstrap-test2.yml
@@ -170,8 +170,8 @@ third:
     serverAddress: 172.31.178.144
   izi:
     accessKey: WUZaMYxRkIfWlbyVslDM
-    #secretKey: YPIJQtWrHvwplAvqJjdNMLcBlELpyEYxSnHjknaK
-    secretKey: invalidKey
+    secretKey: YPIJQtWrHvwplAvqJjdNMLcBlELpyEYxSnHjknaK
+    #secretKey: invalidKey
     phoneVerifyUrl: https://api.izi.credit/v1/phoneverify
     phoneAgeUrl: https://api.izi.credit/v1/phoneage
     identityCheck3Url: https://api.izi.credit/v3/identitycheck
