--- a/doit-api/src/main/resources/bootstrap-test2.yml
+++ b/doit-api/src/main/resources/bootstrap-test2.yml
@@ -172,8 +172,8 @@ third:
     orderStatusFeedback: http://financial.sta.uangme.com/api/v3/order/callback/doit
   izi:
     accessKey: WUZaMYxRkIfWlbyVslDM
-    #secretKey: YPIJQtWrHvwplAvqJjdNMLcBlELpyEYxSnHjknaK
-    secretKey: invalidKey
+    secretKey: YPIJQtWrHvwplAvqJjdNMLcBlELpyEYxSnHjknaK
+    #secretKey: invalidKey
     phoneVerifyUrl: https://api.izi.credit/v1/phoneverify
     phoneAgeUrl: https://api.izi.credit/v1/phoneage
     identityCheck3Url: https://api.izi.credit/v3/identitycheck
