--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    
         {
             "type": "java",
             "name": "Debug (Launch) - Current File",
@@ -209,6 +210,14 @@
         },
         {
             "type": "java",
+            "name": "Remote Debug (Launch)-APIApplication<doit-api>",
+            "request": "attach",
+            "projectName": "doit-api",
+            "hostName": "10.24.30.72",
+            "port": 8080
+        },
+        {
+            "type": "java",
             "name": "Debug (Launch)-PayApplication<doit-pay>",
             "request": "launch",
             "mainClass": "com.yqg.PayApplication",
@@ -396,6 +405,14 @@
             "projectName": "doit-task",
             "hostName": "10.24.30.72",
             "port": 8081
+        },
+        {
+            "type": "java",
+            "name": "Remote Debug (Launch)-RiskApplication<doit-risk>",
+            "request": "attach",
+            "projectName": "doit-risk",
+            "hostName": "10.24.30.72",
+            "port": 8084
         },
         {
             "type": "java",
