1. fix mobile and email reverse 2. throw error when user send wrong mobile no format because java mem heap

--- a/doit-api/src/main/resources/bootstrap-test2.yml
+++ b/doit-api/src/main/resources/bootstrap-test2.yml
@@ -109,7 +109,7 @@ HttpUrl:
   smsUrlInforbipVerify: http://invalid_url.doitglotech.co.id/infobip/verify/pin #:8899/infobip/verify/pin
   smsUrlInforbipVerifyV2: http://api.uat.doitglotech.cloud/infobip/verify/pin #:8899/infobip/verify/pin
 SmsChannelType:
-  type: ZENZIVA
+  type: ZENZIVA_MASKING
 third:
   advance:
     accessKey:  invalidKey
