Fix fcmtoken null

--- a/doit-api/src/main/resources/bootstrap-test2.yml
+++ b/doit-api/src/main/resources/bootstrap-test2.yml
@@ -279,7 +279,7 @@ tongdun:
   appName: DoIt2_and
   checkBeforeCreditUrl: https://apitest.tongdun.net/aurora/apply/v1
 notificationservice:
-  emailUrl: https://notificationapi.doitglotech.co.id/email
+  emailUrl: https://notificationapi-uat.doitglotech.co.id/email
   token: lgezRLxR84n$9@
   
 endpoints.enabled: false
