--- a/doit-risk/src/main/resources/bootstrap-test2.yml
+++ b/doit-risk/src/main/resources/bootstrap-test2.yml
@@ -7,9 +7,9 @@ mysql:
     type: com.alibaba.druid.pool.DruidDataSource
     write:
       name: yishu
-      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8&socketTimeout=120000
-      username: userdoit
-      password: PJf4jqQZ0igtKQ
+      url: jdbc:mysql://doit-polardb.uat.doitglotech.cloud:3306/doit?useUnicode=true&characterEncoding=utf-8&socketTimeout=120000
+      username: doit
+      password: 9p!U4M&o3*ANk#
 
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
@@ -28,9 +28,9 @@ mysql:
       maxOpenPreparedStatements: 20
     read01:
       name: yishu
-      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
-      username: userdoit
-      password: PJf4jqQZ0igtKQ
+      url: jdbc:mysql://doit-polardb.uat.doitglotech.cloud:3306/doit?useUnicode=true&characterEncoding=utf-8
+      username: doit
+      password: 9p!U4M&o3*ANk#
 
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
@@ -49,9 +49,9 @@ mysql:
       maxOpenPreparedStatements: 20
     read02:
       name: yishu
-      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
-      username: userdoit
-      password: PJf4jqQZ0igtKQ
+      url: jdbc:mysql://doit-polardb.uat.doitglotech.cloud:3306/doit?useUnicode=true&characterEncoding=utf-8
+      username: doit
+      password: 9p!U4M&o3*ANk#
 
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
@@ -71,9 +71,9 @@ mysql:
 
     riskBackup:
       name: riskBackup
-      url: jdbc:mysql://maxscale.uat.doitglotech.cloud:3388/doit?useUnicode=true&characterEncoding=utf-8
-      username: userdoit
-      password: PJf4jqQZ0igtKQ
+      url: jdbc:mysql://doit-polardb.uat.doitglotech.cloud:3306/doit?useUnicode=true&characterEncoding=utf-8
+      username: doit
+      password: 9p!U4M&o3*ANk#
 
       type: com.alibaba.druid.pool.DruidDataSource
       driver-class-name: com.mysql.jdbc.Driver
