update redis connection

--- a/doit-api/src/main/resources/bootstrap-test2.yml
+++ b/doit-api/src/main/resources/bootstrap-test2.yml
@@ -85,7 +85,7 @@ jedis:
       maxWaitMillis: 100000    # 最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
     sentinel:
       master: mymaster
-      nodes: redis-A-01.uat.doitglotech.cloud:26379, redis-B-01.uat.doitglotech.cloud:26379, redis-B-02.uat.doitglotech.cloud:26379
+      nodes: redis-A-01.uat.doitglotech.cloud:26379
 
 mongo:
   repleSet: mongo-A-01.uat.doitglotech.cloud:37837
