Separate build library, fix doit-api commons-io library, remove several unused library: zhima,alipay,umpay

--- a/doit-management/pom.xml
+++ b/doit-management/pom.xml
@@ -189,7 +189,7 @@
 
 	</dependencies>
 
-	<build>
+	<!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -207,6 +207,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 </project>
