--- a/doit-pay/pom.xml
+++ b/doit-pay/pom.xml
@@ -183,17 +183,17 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.9</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.taobao</groupId>
 			<artifactId>zhima</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency> -->
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.taobao</groupId>
 			<artifactId>alipay</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -249,11 +249,11 @@
 			<artifactId>jettison</artifactId>
 			<version>1.3</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.zhifu</groupId>
 			<artifactId>umpay</artifactId>
 			<version>1.0.0</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
@@ -271,7 +271,7 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+	<!-- <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -289,6 +289,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
+	</build> -->
 
 </project>
