--- a/doit-service/pom.xml
+++ b/doit-service/pom.xml
@@ -158,12 +158,16 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.8.9</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
+		</dependency> -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
